# ackermann-ballvac

./: README.md
ballvac_ball_collector/: CMakeLists.txt  README_NAV.md  package.xml
ballvac_ball_collector/behavior_trees/: navigate_through_poses_no_spin.xml  navigate_to_pose_no_spin.xml
ballvac_ball_collector/config/: fastdds_no_shm.xml  nav2_ball_collector_params.yaml  nav2_multi_robot_params.yaml  slam_params.yaml
ballvac_ball_collector/include/ballvac_ball_collector/: ball_collector_node.hpp  ball_launcher_node.hpp  ball_perception_node.hpp  exploration_collector_node.hpp  fleet_coordinator_node.hpp  nav_ball_collector_node.hpp
ballvac_ball_collector/launch/: ball_arena.launch.py  ball_collect.launch.py  ball_collection_full.launch.py  multi_robot_ball_collection.launch.py  nav_ball_collect.launch.py
ballvac_ball_collector/scripts/: test_steering.py
ballvac_ball_collector/src/: ball_collector_node.cpp  ball_launcher_node.cpp  ball_perception_node.cpp  exploration_collector_node.cpp  fleet_coordinator_node.cpp  nav_ball_collector_node.cpp  nav_ball_collector_node.cpp.backup  odom_tf_publisher.cpp
ballvac_bringup/: CMakeLists.txt  package.xml
ballvac_bringup/config/: amcl.yaml  nav2_params.yaml  navigation.yaml  ros_gz_bridge.yaml  slam.yaml
ballvac_bringup/launch/: amcl.launch.py  ball_arena_spawn.launch.py  navigation_bringup.launch.py  saye_spawn.launch.py  slam.launch.py
ballvac_bringup/rviz/: ballvac.rviz  navigation.rviz
ballvac_bringup/scripts/: odom_to_tf_node.py
ballvac_control/: CMakeLists.txt  package.xml
ballvac_control/include/ballvac_control/: control.hpp
ballvac_control/src/: client.cpp  main.cpp  motion_controller_node.cpp
ballvac_description/: CMakeLists.txt  package.xml
ballvac_description/hooks/: ros_gz_example_description.dsv.in  ros_gz_example_description.sh.in
ballvac_description/models/balls/ball_blue/: model.config  model.sdf
ballvac_description/models/balls/ball_green/: model.config  model.sdf
ballvac_description/models/balls/ball_orange/: model.config  model.sdf
ballvac_description/models/balls/ball_purple/: model.config  model.sdf
ballvac_description/models/balls/ball_red/: model.config  model.sdf
ballvac_description/models/balls/ball_yellow/: model.config  model.sdf
ballvac_description/models/ballvac/: model.sdf
ballvac_description/worlds/: ball_arena.sdf  ballvac_world.sdf
ballvac_msgs/: CMakeLists.txt  package.xml
ballvac_msgs/msg/: BallDetection.msg  BallDetectionArray.msg  BallRegistry.msg  BallState.msg  FleetAssignments.msg  RobotAssignment.msg  RobotStatus.msg
